--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta2'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
@@ -27,13 +27,20 @@ task wrapper(type: Wrapper) {
 // Define versions in a single place
 ext {
     // Sdk and tools
-    minSdkVersion = 9
+    minSdkVersion = 15
     targetSdkVersion = 23
     compileSdkVersion = 23
     buildToolsVersion = '23.0.2'
 
     // App dependencies
     supportLibraryVersion = '23.1.1'
+    playServicesVersion = '8.4.0'
     guavaVersion = '18.0'
+    butterknifeVersion = '7.0.1'
+    timberVersion = '4.1.0'
+    leakCanaryVersion = '1.3.1'
+    dagger2Version = '2.0.2'
+    hugoVersion = '1.2.1'
+
     junitVersion = '4.12'
 }
