--- a/app/config/config.properties
+++ b/app/config/config.properties
@@ -25,3 +25,5 @@ fabric_api_key=your_api_key
 fabric_api_secret=your_api_secret
 fabric_testers_file=your_testers_file
 
+#Testfairy
+testfairy_api_key=your_api_key
