--- a/app/src/mock/AndroidManifest.xml
+++ b/app/src/mock/AndroidManifest.xml
@@ -14,6 +14,11 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name_mock">Device Info Mock</string>
-</resources>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <application
+        android:label="@string/app_name_mock"
+        tools:replace="android:label" />
+
+</manifest>
