--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.21.3'
         classpath 'com.testfairy.plugins.gradle:testfairy:1.+'
         classpath "com.jakewharton.hugo:hugo-plugin:$rootProject.hugoVersion"
     }
@@ -94,8 +94,6 @@ android {
         }
 
         debug {
-            //TODO Enable crashlytics when this bug is fixed https://twittercommunity.com/t/crashlyticsstoredeobs-task-fails-with-enabled-shrinker/60935
-            ext.enableCrashlytics = false
             minifyEnabled true
             useProguard false
             applicationIdSuffix '.debug'
@@ -152,6 +150,7 @@ dependencies {
     compile "com.google.android.gms:play-services-ads:$rootProject.playServicesVersion"
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
     compile "com.jakewharton.timber:timber:$rootProject.timberVersion"
+    debugCompile "com.facebook.stetho:stetho:$rootProject.stethoVersion"
     debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.leakCanaryVersion"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
     compile "com.google.dagger:dagger:$rootProject.dagger2Version"
