--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     guavaVersion = '18.0'
     butterknifeVersion = '7.0.1'
     timberVersion = '4.1.0'
+    stethoVersion = '1.3.0'
     leakCanaryVersion = '1.3.1'
     dagger2Version = '2.0.2'
     hugoVersion = '1.2.1'
