--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.21.3'
+        classpath 'io.fabric.tools:gradle:1.21.4'
         classpath 'com.testfairy.plugins.gradle:testfairy:1.+'
         classpath "com.jakewharton.hugo:hugo-plugin:$rootProject.hugoVersion"
     }
@@ -171,9 +171,11 @@ dependencies {
     // Dependencies for local unit tests
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
     testCompile "junit:junit:$rootProject.junitVersion"
-    testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
-    testCompile "org.powermock:powermock-module-junit4:$rootProject.ext.powerMockitoVersion"
-    testCompile "org.powermock:powermock-api-mockito:$rootProject.ext.powerMockitoVersion"
+    testCompile "org.mockito:mockito-all:$rootProject.mockitoVersion"
+    testCompile "org.powermock:powermock-module-junit4:$rootProject.powerMockitoVersion"
+    testCompile "org.powermock:powermock-api-mockito:$rootProject.powerMockitoVersion"
+    testCompile "org.robolectric:robolectric:$rootProject.robolectricVersion"
+    testCompile "org.assertj:assertj-core:$rootProject.assertjVersion"
 }
 
 /*
