--- a/app/build.gradle
+++ b/app/build.gradle
@@ -183,6 +183,8 @@ dependencies {
     testCompile "org.robolectric:robolectric:$rootProject.robolectricVersion"
     testCompile "org.assertj:assertj-core:$rootProject.assertjVersion"
     testCompile 'com.squareup.assertj:assertj-android:1.1.1'
+    testCompile "com.google.dagger:dagger:$rootProject.dagger2Version"
+    testCompile "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
 }
 
 /*
