DI-3 Teamcity jacoco integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -272,7 +272,7 @@ project.afterEvaluate {
                 }
             }
 
-            println "##teamcity[jacocoReport dataPath=\'${project.buildDir}/jacoco/test${productFlavorName.capitalize()}${buildTypeName.capitalize()}UnitTest.exec\' includes=\'com.smartstudio.deviceinfo.*\' excludes=\'**/R.class **/R\$*.class **/*_Factory.class **/BuildConfig.* **/Manifest*.* android/**/*.* **/di/**/*.* **/org/**/*.* **/*_MembersInjector.class **/*\$\$*.class\']"
+            println "##teamcity[jacocoReport dataPath=\'app/build//jacoco/test${productFlavorName.capitalize()}${buildTypeName.capitalize()}UnitTest.exec\' includes=\'com.smartstudio.deviceinfo.*\' excludes=\'**/R.class **/R\$*.class **/*_Factory.class **/BuildConfig.* **/Manifest*.* android/**/*.* **/di/**/*.* **/org/**/*.* **/*_MembersInjector.class **/*\$\$*.class\']"
         }
     }
 }
