--- a/app/config/config.properties
+++ b/app/config/config.properties
@@ -27,3 +27,6 @@ fabric_testers_file=your_testers_file
 
 #Testfairy
 testfairy_api_key=your_api_key
+
+#Urls
+repository_url=https://github.com/Smart-Studio/device-info
