DI-14 Implemented attributions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
 
         <activity android:name=".controllers.about.AboutActivity" />
 
+        <activity android:name=".controllers.about.attributions.AttributionsActivity"/>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="${fabricApiKey}" />
