--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jacoco:org.jacoco.core:0.7.6.201602180812"
-        classpath 'com.android.tools.build:gradle:2.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:2.1.0-alpha1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
@@ -51,7 +51,7 @@ ext {
     powerMockitoVersion = '1.6.4'
     robolectricVersion = '3.0'
     assertjVersion = '3.3.0'
-
+    assertJAndroidVersion = '1.1.1'
     junitVersion = '4.12'
     jacocoVersion = '0.7.6.201602180812'
 }
