DI-16 Added nimbledroid api key to config file

--- a/app/config/config.properties
+++ b/app/config/config.properties
@@ -28,5 +28,8 @@ fabric_testers_file=your_testers_file
 #Testfairy
 testfairy_api_key=your_api_key
 
+#Nimbledroid
+nimbledroid_api_key=your_api_key
+
 #Urls
 repository_url=https://github.com/Smart-Studio/device-info
