--- a/app/jacoco.gradle
+++ b/app/jacoco.gradle
@@ -37,7 +37,7 @@ project.afterEvaluate {
             // Create coverage task of form 'testFlavorTypeCoverage' depending on 'testFlavorTypeUnitTest'
             task "${unitTestTaskName}Coverage"(type: JacocoReport) {
                 dependsOn "$unitTestTaskName"
-           //     dependsOn "$connectedTestTaskName"
+                dependsOn "$connectedTestTaskName"
                 group = "Reporting"
                 description = "Generate Jacoco coverage reports on the ${sourceName} build."
 
