--- a/app/config/config.properties
+++ b/app/config/config.properties
@@ -20,6 +20,10 @@ release_store_pass=your_keystore_pass
 release_key_alias=your_keystore_alias
 release_key_pass=your_keystore_pass
 
+#Google analytics
+analytics_tracking_id=your_tracking_id
+analytics_debug_tracking_id=your_tracking_id
+
 #Fabric
 fabric_api_key=your_api_key
 fabric_api_secret=your_api_secret
