--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ android {
             minifyEnabled true
             useProguard true
             shrinkResources true
+            //TODO Disable for Google Play Store apk
             testCoverageEnabled true
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
