--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4'
         classpath "org.jacoco:org.jacoco.core:0.7.6.201602180812"
         classpath 'com.android.tools.build:gradle:2.1.0-alpha4'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
