--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ apply from: 'jacoco.gradle'
 def versionMajor = 1
 def versionMinor = 0
 def versionPatch = 0
+def versionBuild = 1 // bump for dogfood builds, public betas, etc.
 
 
 class Config {
@@ -65,7 +66,7 @@ android {
         applicationId "com.smarstudio.deviceinfo"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
-        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100
+        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         project.archivesBaseName = "device-info-${versionName}"
 
