--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.21.4'
-        classpath 'com.testfairy.plugins.gradle:testfairy:1.+'
-        classpath "com.jakewharton.hugo:hugo-plugin:$rootProject.hugoVersion"
+        classpath 'io.fabric.tools:gradle:1.21.6'
+        classpath 'com.testfairy.plugins.gradle:testfairy:1.12'
+        classpath "com.jakewharton.hugo:hugo-plugin:1.2.1"
     }
 }
 
@@ -57,15 +57,15 @@ ext {
 }
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion rootProject.buildToolsVersion
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
     //TODO To support shadow object in robolectric, remove when fixed https://github.com/robolectric/robolectric/issues/1862
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.smarstudio.deviceinfo"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 23
         versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         project.archivesBaseName = "device-info-${versionName}"
@@ -163,61 +163,83 @@ nimbledroid {
 }
 
 spoon {
-    // for debug output
-    debug = true
     adbTimeout = 60
+}
+
+ext {
+    // App dependencies
+    supportLibraryVersion = '23.4.0'
+    playServicesVersion = '8.4.0'
+    guavaVersion = '19.0'
+    butterknifeVersion = '8.0.1'
+    timberVersion = '4.1.1'
+    stethoVersion = '1.3.1'
+    leakCanaryVersion = '1.4-beta2'
+    dagger2Version = '2.4'
+
+    // Testing dependencies
+    espressoVersion = '2.2.2'
+    testingSupportVersion = '0.5'
+    mockitoVersion = '2.0.2-beta'
+    powerMockitoVersion = '1.6.5'
+    robolectricVersion = '3.0'
+    spoonVersion = '1.5.3'
+    assertjVersion = '3.3.0'
+    assertJAndroidVersion = '1.1.1'
+    junitVersion = '4.12'
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-annotations:$rootProject.supportLibraryVersion"
-    compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:percent:$rootProject.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:design:$rootProject.supportLibraryVersion"
-    compile "com.google.guava:guava:$rootProject.guavaVersion"
-    compile "com.google.android.gms:play-services-analytics:$rootProject.playServicesVersion"
-    compile "com.google.android.gms:play-services-base:$rootProject.playServicesVersion"
-    compile "com.google.android.gms:play-services-ads:$rootProject.playServicesVersion"
-    compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
-    compile "com.jakewharton.timber:timber:$rootProject.timberVersion"
-    debugCompile "com.facebook.stetho:stetho:$rootProject.stethoVersion"
-    debugCompile "com.squareup.leakcanary:leakcanary-android:$rootProject.leakCanaryVersion"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
-    compile "com.google.dagger:dagger:$rootProject.dagger2Version"
-    apt "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
+    compile "com.android.support:support-annotations:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:percent:$supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.google.guava:guava:$guavaVersion"
+    compile "com.google.android.gms:play-services-analytics:$playServicesVersion"
+    compile "com.google.android.gms:play-services-base:$playServicesVersion"
+    compile "com.google.android.gms:play-services-ads:$playServicesVersion"
+    compile "com.jakewharton:butterknife:$butterknifeVersion"
+    apt "com.jakewharton:butterknife-compiler:$butterknifeVersion"
+    compile "com.jakewharton.timber:timber:$timberVersion"
+    debugCompile "com.facebook.stetho:stetho:$stethoVersion"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+    compile "com.google.dagger:dagger:$dagger2Version"
+    apt "com.google.dagger:dagger-compiler:$dagger2Version"
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
 
     // Espresso UI Testing dependencies.
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$rootProject.ext.espressoVersion") {
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$espressoVersion"
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espressoVersion") {
         exclude module: 'support-annotations'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
     }
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.ext.espressoVersion"
-    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
     // Android Testing Support Library's runner and rules
-    androidTestCompile "com.android.support.test:runner:$rootProject.ext.testingSupportVersion"
-    androidTestCompile "com.android.support.test:rules:$rootProject.ext.testingSupportVersion"
-    androidTestCompile "com.squareup.assertj:assertj-android:$rootProject.ext.assertJAndroidVersion"
-    androidTestCompile 'com.squareup.spoon:spoon-client:1.3.2'
+    androidTestCompile "com.android.support.test:runner:$testingSupportVersion"
+    androidTestCompile "com.android.support.test:rules:$testingSupportVersion"
+    androidTestCompile "com.squareup.assertj:assertj-android:$assertJAndroidVersion"
+    androidTestCompile "com.squareup.spoon:spoon-client:$spoonVersion"
 
     // Dependencies for local unit tests
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakCanaryVersion"
-    testCompile "junit:junit:$rootProject.junitVersion"
-    testCompile "org.mockito:mockito-all:$rootProject.mockitoVersion"
-    testCompile "org.powermock:powermock-module-junit4:$rootProject.powerMockitoVersion"
-    testCompile "org.powermock:powermock-module-junit4-rule:$rootProject.powerMockitoVersion"
-    testCompile "org.powermock:powermock-api-mockito:$rootProject.powerMockitoVersion"
-    testCompile "org.powermock:powermock-classloading-xstream:$rootProject.powerMockitoVersion"
-    testCompile "org.robolectric:robolectric:$rootProject.robolectricVersion"
-    testCompile "org.assertj:assertj-core:$rootProject.assertjVersion"
-    testCompile "com.squareup.assertj:assertj-android:$rootProject.ext.assertJAndroidVersion"
-    testCompile "com.google.dagger:dagger:$rootProject.dagger2Version"
-    testCompile "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+    testCompile "junit:junit:$junitVersion"
+    testCompile "org.mockito:mockito-all:$mockitoVersion"
+    testCompile "org.powermock:powermock-module-junit4:$powerMockitoVersion"
+    testCompile "org.powermock:powermock-module-junit4-rule:$powerMockitoVersion"
+    testCompile "org.powermock:powermock-api-mockito:$powerMockitoVersion"
+    testCompile "org.powermock:powermock-classloading-xstream:$powerMockitoVersion"
+    testCompile "org.robolectric:robolectric:$robolectricVersion"
+    testCompile "org.assertj:assertj-core:$assertjVersion"
+    testCompile "com.squareup.assertj:assertj-android:$assertJAndroidVersion"
+    testCompile "com.google.dagger:dagger:$dagger2Version"
+    testCompile "com.google.dagger:dagger-compiler:$dagger2Version"
 }
 
 /*
@@ -225,7 +247,7 @@ Resolves dependency versions across test and production APKs, specifically, tran
 dependencies. This is required since Espresso internally has a dependency on support-annotations.
 */
 configurations.all {
-    resolutionStrategy.force "com.android.support:support-annotations:$rootProject.supportLibraryVersion"
+    resolutionStrategy.force "com.android.support:support-annotations:$supportLibraryVersion"
 }
 
 /*All direct/transitive dependencies shared between your test and production APKs need to be
