--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.4'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.1.0'
         classpath "org.jacoco:org.jacoco.core:0.7.6.201602180812"
-        classpath 'com.android.tools.build:gradle:2.1.0-alpha5'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.github.JakeWharton:sdk-manager-plugin:1d07987217120fffdc0ce1291d73e974310d7d92'
@@ -24,37 +24,6 @@ task clean(type: Delete) {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.13-20160228000026+0000'
+    gradleVersion = '2.13'
     distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
-}
-
-// Define versions in a single place
-ext {
-    // Sdk and tools
-    minSdkVersion = 15
-    targetSdkVersion = 23
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.2'
-
-    // App dependencies
-    supportLibraryVersion = '23.2.1'
-    playServicesVersion = '8.4.0'
-    guavaVersion = '18.0'
-    butterknifeVersion = '7.0.1'
-    timberVersion = '4.1.0'
-    stethoVersion = '1.3.0'
-    leakCanaryVersion = '1.3.1'
-    dagger2Version = '2.0.2'
-    hugoVersion = '1.2.1'
-
-    // Testing dependencies
-    espressoVersion = '2.2.1'
-    testingSupportVersion = '0.4.1'
-    mockitoVersion = '2.0.2-beta'
-    powerMockitoVersion = '1.6.4'
-    robolectricVersion = '3.0'
-    assertjVersion = '3.3.0'
-    assertJAndroidVersion = '1.1.1'
-    junitVersion = '4.12'
-    jacocoVersion = '0.7.6.201602180812'
 }
