--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity-alias>
 
-        <activity android:name=".controllers.screeninfo.ScreenInfoFragment" />
+        <activity android:name=".controllers.dashboard.screeninfo.ScreenInfoFragment" />
 
         <activity android:name=".controllers.about.AboutActivity" />
 
