--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        applicationId "com.smarstudio.deviceinfo"
+        applicationId "com.smartstudio.deviceinfo"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
@@ -169,10 +169,10 @@ spoon {
 ext {
     // App dependencies
     supportLibraryVersion = '23.4.0'
-    playServicesVersion = '8.4.0'
+    playServicesVersion = '9.0.0'
     guavaVersion = '19.0'
     butterknifeVersion = '8.0.1'
-    timberVersion = '4.1.1'
+    timberVersion = '4.1.2'
     stethoVersion = '1.3.1'
     leakCanaryVersion = '1.4-beta2'
     dagger2Version = '2.4'
